# PraisonAIPPT

./: .env.example  .gitignore  AGENTS-SERMON-ARTICLES.md  AGENTS.md  Bible_Verses_Collection.pptx  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PLAN_REVIEW.md  QUICKSTART.md  README.md  RESTRUCTURING_PLAN.md  app.py  bbible verse 2.pptx  create_bible_verses_presentation.py  create_presentation.py  install.sh  mkdocs.yml  pyproject.toml  setup.py  tamil_verses.json  verses.json
.agent/workflows/: analysis.md
.cursor/rules/: daily-single-plain-language.mdc  multi-agent-analyse-first.mdc  rebuild-how-to-come-out-pptx.mdc
.github/workflows/: markdownlint.yml  tests.yml
.windsurf/workflows/: instruction.md
docs/: CNAME  Gemfile  README.md  _config.yml  architecture-pipeline.md  avatar-calibration.md  avatar-layouts.md  commands.md  configuration.md  daily-single-testing.md  daily-single-video.md  deck-layouts.md  examples.md  formatting.md  google-drive-upload.md  hero-text-calibration.md  heygen-examples.md  index.md  installation.md  layouts-overview.md  lazy-loading.md  oauth-setup.md  pdf-conversion.md  pipeline-overview.md  pptx-to-json.md  python-api.md  quickstart.md  recent-features.md  slide-images.md  slide-layouts.md  slide-qa.md  slide-style-reference.md  slide-transitions.md  templates.md  troubleshooting.md  video-export.md  video-qa.md  workflow-video-transcript-to-deck.md  yaml-reference.md
docs/_layouts/: default.html
docs/snippets/: slide_style_table.md
examples/: 100_fold_blessing.json  100_fold_blessing.yaml  Immanuel.json  Immanuel.yaml  authority_over_death.json  authority_over_death.yaml  avatar_calibration_agents.py  avatar_layouts.yaml  be_fruitful_and_multiply.json  be_fruitful_and_multiply.yaml  be_fruitful_and_multiply_v2.json  be_fruitful_and_multiply_v2.yaml  being_fruitful.md  being_fruitful.yaml  being_fruitful_through_gospel.md  being_fruitful_through_gospel.yaml  build_showcase_examples.py  deck_template_gallery.yaml  elshadai.json  elshadai.yaml  first_adam_vs_last_adam.json  first_adam_vs_last_adam.yaml  freedom_from_all_your_troubles.json  freedom_from_all_your_troubles.yaml  freedom_in_spirit.json  freedom_in_spirit.yaml  freedom_in_spirit_no_highlights.json  freedom_in_spirit_with_highlights.json  full_restoration.json  full_restoration.yaml  god_is_good_all_the_time.json  god_is_good_all_the_time.yaml  god_with_us.json  gospel.json  gospel.yaml  gospel_in_the_stars.json  gospel_in_the_stars.yaml  great_faith.yaml  heygen-50590-audio-only.yaml  heygen-50590-content.yaml  (+55 more)
examples/sermon_packs/: bic_pack2.yaml  bic_pack2_visual_briefs.yaml
examples/template_demos/: _showcase.yaml  build_demos.py  default.yaml  light-minimal.yaml  sermon-dark-center.yaml  sermon-dark-ref-bottom.yaml  sermon-dark.yaml  sermon-gold.yaml
examples/videos/: README.md
pptx_bible_verses/: __init__.py  cli.py  core.py
praisonaippt/: __init__.py  audio_align.py  avatar_calibrate.py  avatar_layouts.py  cli.py  config.py  core.py  deck_pipeline.py  deck_slides.py  exceptions.py  face_detect.py  ffmpeg_composer.py  gdrive_uploader.py  hero_panel_calibrate.py  hero_panel_measure.py  layout_tokens.py  list_slides.py  loader.py  pdf_converter.py  pip_face_measure.py  pipeline_protocols.py  plan_slides.py  pptx_to_json.py  schema.py  slide_images.py  slide_qa.py  slide_renderers.py  slide_transition.py  template_resolver.py  text_panel_anchors.py  text_region_detect.py  transcript_loader.py  transition_backends.py  utils.py  variant_sync.py  video_exporter.py  video_presets.py  video_protocol.py  video_sidecar.py  vision_describe.py  (+2 more)
praisonaippt/daily_single/: __init__.py  __main__.py  assemble.py  asset_inventory_audit.py  audience_language.py  avatar_pip.py  beat01_timing.py  beat10_timing.py  beat_map_audit.py  bookends.py  brand_bumper.py  canonical_scroll.py  captions.py  chart_script_audit.py  cli.py  clip_trim_audit.py  content_framing.py  cue_map_audit.py  cue_slide_sync.py  display_sync.py  engagement_audit.py  engine.py  env.py  hook_attention_audit.py  hook_montage.py  hook_validation.py  media_sync.py  montage_clock_audit.py  openai_whisper.py  page_capture_quality.py  pipeline.py  project.py  protocol.py  publish_quality_config.py  resource_usefulness_audit.py  scripts.py  segment_cue_timing.py  simple_language_audit.py  slide_design_audit.py  slide_word_map.py  (+15 more)
praisonaippt/deck_export/: __init__.py  highlights.py  html.py  markdown.py
praisonaippt/segment_video/: __init__.py  __main__.py  align.py  cli.py  (+13 more)
scripts/: build_sermon_inventory_csv.py  build_sermon_pack.py  generate_pack2_remaining_covers.sh  generate_yaml_examples.py  pack2_sermon_visual_briefs.yaml  sermon_article.sh  upload_pack2_covers.sh  watch_and_rebuild_ppt.py
templates/: README.md  __init__.py  deck-sales-blue.yaml  default.yaml  light-minimal.yaml  sermon-dark-center.yaml  sermon-dark-ref-bottom.yaml  sermon-dark.yaml  sermon-gold.yaml
tests/: test_asset_inventory_audit.py  test_audience_language.py  test_audio_align.py  test_audio_loudness.py  test_av_pillar_gates.py  test_avatar_calibrate.py  test_avatar_calibrate_hybrid.py  test_avatar_calibrate_sdk_integration.py  test_avatar_layouts.py  test_avatar_pip.py  test_beat_map_audit.py  test_brand_bumper_and_word_map.py  test_canonical_crawl_srcset.py  test_canonical_scroll.py  test_clip_trim_audit.py  test_config_env.py  test_content_framing.py  test_cue_slide_sync.py  test_daily_single_captions.py  test_daily_single_display_sync_unit.py  test_daily_single_engine.py  test_daily_single_hook_montage.py  test_daily_single_media_sync.py  test_daily_single_sync_validation.py  test_daily_single_visual_audit.py  test_daily_single_youtube_quality.py  test_deck_pipeline.py  test_deck_slides.py  test_deck_to_markdown.py  test_display_sync_validation.py  test_engagement_audit.py  test_fable_demo_clips.py  test_ffmpeg_transitions.py  test_gdrive_uploader.py  test_hero_panel_calibrate.py  test_hero_panel_measure.py  test_hero_panel_sdk_integration.py  test_heygen_images_variant.py  test_hook_attention_audit.py  test_image_slides.py  (+45 more)
(+121 files in other folders)
