[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "praisonaippt"
version = "1.4.35"
description = "PraisonAI PPT - Create beautiful PowerPoint presentations from Bible verses in JSON or YAML format"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "MervinPraison"}
]
keywords = ["powerpoint", "pptx", "bible", "verses", "presentation", "generator", "praisonai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Religion",
    "Topic :: Office/Business :: Office Suites",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-pptx>=0.6.21",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
pdf-aspose = ["aspose.slides>=24.0.0"]
pdf-all = ["aspose.slides>=24.0.0", "psutil>=5.9.0", "tqdm>=4.64.0"]
video-tts = ["edge-tts>=6.0"]
video-tts-azure = ["azure-cognitiveservices-speech>=1.32"]
video-windows = ["pywin32>=306"]
gdrive = [
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.80.0",
]
avatar-calibrate = [
    "mediapipe>=0.10.14; python_version>='3.8'",
    "opencv-python-headless>=4.8; python_version>='3.8'",
    "numpy>=1.20",
    "pillow>=9.0",
]
avatar-calibrate-yolo = [
    "ultralytics>=8.3; python_version>='3.8'",
    "mediapipe>=0.10.14; python_version>='3.8'",
    "opencv-python-headless>=4.8; python_version>='3.8'",
    "numpy>=1.20",
    "pillow>=9.0",
]
hero-text-detect = [
    "opencv-python-headless>=4.8; python_version>='3.8'",
    "numpy>=1.20",
    "pillow>=9.0",
]
hero-text-paddle = [
    "paddleocr>=3.0; python_version>='3.8'",
    "opencv-python-headless>=4.8; python_version>='3.8'",
    "numpy>=1.20",
    "pillow>=9.0",
]
slide-vision = [
    "openai>=1.40; python_version>='3.8'",
    "anthropic>=0.40; python_version>='3.8'",
]
hero-text-rapidocr = [
    "rapidocr-onnxruntime>=1.3; python_version>='3.8'",
    "opencv-python-headless>=4.8; python_version>='3.8'",
    "numpy>=1.20",
    "pillow>=9.0",
]
all = [
    "aspose.slides>=24.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.64.0",
    "edge-tts>=6.0",
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.80.0",
]
dev = [
    "pytest>=7",
    "build",
]

[project.urls]
Homepage = "https://github.com/MervinPraison/PraisonAIPPT"
"Bug Reports" = "https://github.com/MervinPraison/PraisonAIPPT/issues"
"Source" = "https://github.com/MervinPraison/PraisonAIPPT"

[project.scripts]
praisonaippt = "praisonaippt.cli:main"

[tool.setuptools]
packages = ["praisonaippt", "praisonaippt.workers", "examples", "templates"]

[tool.setuptools.package-data]
examples = ["*.json", "*.yaml", "*.yml"]
templates = ["*.yaml", "*.yml", "README.md"]
